[package]
name = "apiexampleopenidc001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken =  {version = "8.3" , features = ["use_pem"]}
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11", default-features = false,features = ["json","rustls-tls"] }
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
